# CameraStreaming

./: .gitignore  CMakeLists.txt  README.md
data/: Json_Data_Formater.py  config_file.json  sample_rtsp.json
src/: CMakeLists.txt  config.cfg  config.h  main.cpp  queue.h  showmayimages.h  stitchingimg.h
src/CMakeModules/: FindFFmpeg.cmake
